Update Readme instructions.

--- a/Multiclass Classification.ipynb
+++ b/Multiclass Classification.ipynb
@@ -10,9 +10,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "RPA",
+   "display_name": "WiMLDS",
    "language": "python",
-   "name": "mdservice"
+   "name": "wimlds"
   },
   "language_info": {
    "codemirror_mode": {
